--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
-  "private": true,
-  "name": "Image",
+  "name": "base64.png",
   "description": "Scramble/unscramble Image",
   "engines": {
     "node": ">=7.0.0"
@@ -10,13 +9,15 @@
     "build": "webpack"
   },
   "devDependencies": {
-    "babel-core": "^6.21.0",
-    "babel-loader": "^6.2.10",
-    "babel-preset-es2015": "^6.18.0",
+    "@babel/core": "^7.8.6",
+    "@babel/preset-env": "^7.8.6",
+    "babel-loader": "^8.0.6",
+    "babel-preset-es2015": "^6.24.1",
     "css-loader": "^0.28.2",
-    "html-webpack-plugin": "^2.26.0",
+    "html-webpack-plugin": "^3.2.0",
     "style-loader": "^0.18.0",
-    "webpack": "^2.2.0",
-    "webpack-dev-server": "^3.1.11"
+    "webpack": "^4.42.0",
+    "webpack-cli": "^3.1.1",
+    "webpack-dev-server": "^3.1.4"
   }
 }
